Enable Milestone module UpdateParams
