# x/milestone/types/milestone.pb.go
@@ -214,10 +214,55 @@ func (m *MilestoneProposition) GetStartBlockNumber() uint64 {
 	return 0
 }
 
+type Params struct {
+	MaxMilestonePropositionLength uint64 `protobuf:"varint,1,opt,name=max_milestone_proposition_length,json=maxMilestonePropositionLength,proto3" json:"max_milestone_proposition_length,omitempty"`
+}
+
+func (m *Params) Reset()         { *m = Params{} }
+func (m *Params) String() string { return proto.CompactTextString(m) }
+func (*Params) ProtoMessage()    {}
+func (*Params) Descriptor() ([]byte, []int) {
+	return fileDescriptor_6d06b2e981472ef5, []int{3}
+}
+func (m *Params) XXX_Unmarshal(b []byte) error {
+	return m.Unmarshal(b)
+}
+func (m *Params) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	if deterministic {
+		return xxx_messageInfo_Params.Marshal(b, m, deterministic)
+	} else {
+		b = b[:cap(b)]
+		n, err := m.MarshalToSizedBuffer(b)
+		if err != nil {
+			return nil, err
+		}
+		return b[:n], nil
+	}
+}
+func (m *Params) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_Params.Merge(m, src)
+}
+func (m *Params) XXX_Size() int {
+	return m.Size()
+}
+func (m *Params) XXX_DiscardUnknown() {
+	xxx_messageInfo_Params.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_Params proto.InternalMessageInfo
+
+func (m *Params) GetMaxMilestonePropositionLength() uint64 {
+	if m != nil {
+		return m.MaxMilestonePropositionLength
+	}
+	return 0
+}
+
 func init() {
 	proto.RegisterType((*Milestone)(nil), "heimdallv2.milestone.Milestone")
 	proto.RegisterType((*MilestoneCount)(nil), "heimdallv2.milestone.MilestoneCount")
 	proto.RegisterType((*MilestoneProposition)(nil), "heimdallv2.milestone.MilestoneProposition")
+	proto.RegisterType((*Params)(nil), "heimdallv2.milestone.Params")
 }
 
 func init() {
@@ -225,35 +270,37 @@ func init() {
 }
 
 var fileDescriptor_6d06b2e981472ef5 = []byte{
-	// 442 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x92, 0x3f, 0x6f, 0xd3, 0x40,
-	0x18, 0xc6, 0x73, 0x6d, 0x52, 0x92, 0x4b, 0x84, 0xe0, 0x94, 0xc1, 0x2d, 0xc2, 0x8d, 0x02, 0x02,
-	0x0b, 0xa9, 0x31, 0x4a, 0x07, 0x04, 0x1b, 0xee, 0x42, 0x25, 0x40, 0x15, 0x6c, 0x2c, 0x96, 0xed,
-	0x3b, 0xd9, 0x27, 0x7c, 0xf7, 0x5a, 0x77, 0x97, 0xaa, 0x9d, 0x58, 0x19, 0xf9, 0x08, 0x1d, 0xd9,
-	0x60, 0xe0, 0x43, 0x30, 0x56, 0x4c, 0x8c, 0x28, 0x19, 0xe0, 0x63, 0x20, 0x9f, 0xe3, 0x3f, 0x5d,
-	0xac, 0xf7, 0x9e, 0xdf, 0xf3, 0x9e, 0xdf, 0x7b, 0xf4, 0xe2, 0x87, 0x19, 0xe3, 0x82, 0x46, 0x79,
-	0x7e, 0xbe, 0xf4, 0x05, 0xcf, 0x99, 0x36, 0x20, 0x59, 0x5b, 0x2d, 0x0a, 0x05, 0x06, 0xc8, 0xb4,
-	0x75, 0x2d, 0x1a, 0x76, 0x70, 0x37, 0x12, 0x5c, 0x82, 0x6f, 0xbf, 0x95, 0xf1, 0x60, 0x3f, 0x01,
-	0x2d, 0x40, 0x87, 0xf6, 0xe4, 0x57, 0x87, 0x2d, 0x9a, 0xa6, 0x90, 0x42, 0xa5, 0x97, 0x55, 0xa5,
-	0xce, 0xbf, 0xed, 0xe0, 0xd1, 0x9b, 0xfa, 0x46, 0xf2, 0x1c, 0x0f, 0x0b, 0x05, 0x05, 0x68, 0xa6,
-	0x1c, 0x34, 0x43, 0xde, 0x28, 0xb8, 0xff, 0xeb, 0xc7, 0xd1, 0x74, 0x7b, 0xcf, 0x4b, 0x4a, 0x15,
-	0xd3, 0xfa, 0xbd, 0x51, 0x5c, 0xa6, 0x5f, 0xff, 0x7e, 0x7f, 0x82, 0xde, 0x35, 0x76, 0xf2, 0x08,
-	0x8f, 0xb5, 0x89, 0x94, 0x09, 0xe3, 0x1c, 0x92, 0x8f, 0xce, 0xce, 0x0c, 0x79, 0xfd, 0x60, 0x50,
-	0xb9, 0xb0, 0x25, 0x41, 0x09, 0xc8, 0x1c, 0x8f, 0x98, 0xa4, 0x5b, 0xd7, 0x6e, 0xd7, 0x35, 0x64,
-	0x92, 0x56, 0x9e, 0x7d, 0xdc, 0xcf, 0x22, 0x9d, 0x39, 0xfd, 0x19, 0xf2, 0x26, 0x35, 0xb6, 0x12,
-	0x79, 0x8c, 0x27, 0x31, 0xa8, 0x30, 0xc9, 0x22, 0x2e, 0x43, 0x4e, 0x9d, 0x81, 0x9d, 0xb2, 0xfe,
-	0x4f, 0x0c, 0xea, 0xa4, 0x24, 0xa7, 0x94, 0x78, 0x78, 0xd2, 0x24, 0x55, 0x1a, 0xf7, 0xba, 0xc6,
-	0x71, 0x83, 0x4e, 0x29, 0x79, 0x80, 0x47, 0x86, 0x0b, 0xa6, 0x4d, 0x24, 0x0a, 0xe7, 0x56, 0x77,
-	0xa2, 0x56, 0x7f, 0x31, 0xfc, 0x7c, 0x75, 0x88, 0xfe, 0x5d, 0x1d, 0xa2, 0xf9, 0x33, 0x7c, 0xbb,
-	0x09, 0xec, 0x04, 0x56, 0xd2, 0x90, 0x7b, 0x78, 0x90, 0x94, 0x85, 0x8d, 0xac, 0x69, 0xae, 0xb4,
-	0x4e, 0xe3, 0x27, 0x3c, 0x6d, 0x1a, 0xcf, 0x6c, 0x6c, 0xdc, 0x70, 0x90, 0xe5, 0xa4, 0x36, 0x8d,
-	0xb0, 0x7c, 0x20, 0xd3, 0x0e, 0x9a, 0xed, 0xb6, 0xaf, 0x1e, 0x5b, 0xf4, 0xca, 0x12, 0x72, 0x8c,
-	0x49, 0x27, 0xe3, 0x50, 0xae, 0x44, 0xcc, 0xd4, 0xcd, 0xa8, 0xef, 0xb4, 0x51, 0xbf, 0xb5, 0xb8,
-	0x1d, 0x20, 0x78, 0xfd, 0x73, 0xed, 0xa2, 0xeb, 0xb5, 0x8b, 0xfe, 0xac, 0x5d, 0xf4, 0x65, 0xe3,
-	0xf6, 0xae, 0x37, 0x6e, 0xef, 0xf7, 0xc6, 0xed, 0x7d, 0x58, 0xa6, 0xdc, 0x64, 0xab, 0x78, 0x91,
-	0x80, 0xf0, 0x9f, 0x5e, 0x9c, 0x41, 0x7e, 0x99, 0x82, 0xf4, 0xeb, 0xa5, 0x3b, 0x3a, 0x5f, 0xfa,
-	0x17, 0x9d, 0xed, 0x34, 0x97, 0x05, 0xd3, 0xf1, 0x9e, 0x5d, 0xa0, 0xe3, 0xff, 0x01, 0x00, 0x00,
-	0xff, 0xff, 0x47, 0xeb, 0x2d, 0xfe, 0xc2, 0x02, 0x00, 0x00,
+	// 479 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x93, 0x31, 0x6f, 0xd3, 0x40,
+	0x14, 0xc7, 0x7b, 0x6d, 0x12, 0x92, 0x4b, 0x84, 0xe0, 0x94, 0xc1, 0x2d, 0xaa, 0x6b, 0x05, 0x04,
+	0x11, 0x52, 0x63, 0x94, 0x0e, 0x08, 0x36, 0xd2, 0x85, 0x4a, 0xa5, 0x8a, 0x60, 0x63, 0xb1, 0xce,
+	0xf6, 0xc9, 0x3e, 0xe1, 0xbb, 0x67, 0xdd, 0x5d, 0xaa, 0x74, 0x62, 0x65, 0xe4, 0x23, 0x74, 0x64,
+	0x83, 0x81, 0x0f, 0xc1, 0x58, 0x31, 0x31, 0xa2, 0x64, 0x80, 0x8f, 0x81, 0x7c, 0x4e, 0x6c, 0x57,
+	0x62, 0xb1, 0xee, 0xde, 0xff, 0xf7, 0xee, 0xfe, 0xef, 0xaf, 0x33, 0x7e, 0x94, 0x32, 0x2e, 0x62,
+	0x9a, 0x65, 0x97, 0x53, 0x5f, 0xf0, 0x8c, 0x69, 0x03, 0x92, 0xd5, 0xab, 0x49, 0xae, 0xc0, 0x00,
+	0x19, 0xd6, 0xd4, 0xa4, 0xd2, 0x0e, 0xee, 0x53, 0xc1, 0x25, 0xf8, 0xf6, 0x5b, 0x82, 0x07, 0xfb,
+	0x11, 0x68, 0x01, 0x3a, 0xb0, 0x3b, 0xbf, 0xdc, 0x6c, 0xa4, 0x61, 0x02, 0x09, 0x94, 0xf5, 0x62,
+	0x55, 0x56, 0x47, 0x5f, 0x77, 0x71, 0xef, 0xcd, 0xf6, 0x44, 0xf2, 0x02, 0x77, 0x73, 0x05, 0x39,
+	0x68, 0xa6, 0x1c, 0xe4, 0xa1, 0x71, 0x6f, 0x76, 0xf8, 0xf3, 0xfb, 0xf1, 0x70, 0x73, 0xce, 0xab,
+	0x38, 0x56, 0x4c, 0xeb, 0x77, 0x46, 0x71, 0x99, 0x7c, 0xf9, 0xf3, 0xed, 0x29, 0x7a, 0x5b, 0xe1,
+	0xe4, 0x31, 0xee, 0x6b, 0x43, 0x95, 0x09, 0xc2, 0x0c, 0xa2, 0x0f, 0xce, 0xae, 0x87, 0xc6, 0xad,
+	0x59, 0xbb, 0xa4, 0xb0, 0x55, 0x66, 0x85, 0x40, 0x46, 0xb8, 0xc7, 0x64, 0xbc, 0xa1, 0xf6, 0x9a,
+	0x54, 0x97, 0xc9, 0xb8, 0x64, 0xf6, 0x71, 0x2b, 0xa5, 0x3a, 0x75, 0x5a, 0x1e, 0x1a, 0x0f, 0xb6,
+	0xb2, 0x2d, 0x91, 0x27, 0x78, 0x10, 0x82, 0x0a, 0xa2, 0x94, 0x72, 0x19, 0xf0, 0xd8, 0x69, 0x5b,
+	0x97, 0xdb, 0x7b, 0x42, 0x50, 0xa7, 0x85, 0x72, 0x16, 0x93, 0x31, 0x1e, 0x54, 0x49, 0x15, 0x60,
+	0xa7, 0x09, 0xf6, 0x2b, 0xe9, 0x2c, 0x26, 0x0f, 0x71, 0xcf, 0x70, 0xc1, 0xb4, 0xa1, 0x22, 0x77,
+	0xee, 0x34, 0x1d, 0xd5, 0xf5, 0x97, 0xdd, 0x4f, 0xd7, 0x47, 0xe8, 0xef, 0xf5, 0x11, 0x1a, 0x3d,
+	0xc7, 0x77, 0xab, 0xc0, 0x4e, 0x61, 0x21, 0x0d, 0x79, 0x80, 0xdb, 0x51, 0xb1, 0xb0, 0x91, 0x55,
+	0xcd, 0x65, 0xad, 0xd1, 0xf8, 0x11, 0x0f, 0xab, 0xc6, 0xb9, 0x8d, 0x8d, 0x1b, 0x0e, 0xb2, 0x70,
+	0x6a, 0xd3, 0x08, 0x8a, 0x01, 0x99, 0x76, 0x90, 0xb7, 0x57, 0x4f, 0xdd, 0xb7, 0xd2, 0x6b, 0xab,
+	0x90, 0x13, 0x4c, 0x1a, 0x19, 0x07, 0x72, 0x21, 0x42, 0xa6, 0x6e, 0x47, 0x7d, 0xaf, 0x8e, 0xfa,
+	0xc2, 0xca, 0x0d, 0x03, 0x21, 0xee, 0xcc, 0xa9, 0xa2, 0x42, 0x93, 0x0b, 0xec, 0x09, 0xba, 0x0c,
+	0xea, 0x80, 0xf2, 0xda, 0x4f, 0x90, 0x31, 0x99, 0x98, 0xf4, 0xf6, 0x30, 0x87, 0x82, 0x2e, 0xff,
+	0x67, 0xfe, 0xdc, 0xb2, 0xf5, 0x1d, 0xb3, 0xf3, 0x1f, 0x2b, 0x17, 0xdd, 0xac, 0x5c, 0xf4, 0x7b,
+	0xe5, 0xa2, 0xcf, 0x6b, 0x77, 0xe7, 0x66, 0xed, 0xee, 0xfc, 0x5a, 0xbb, 0x3b, 0xef, 0xa7, 0x09,
+	0x37, 0xe9, 0x22, 0x9c, 0x44, 0x20, 0xfc, 0x67, 0xcb, 0x39, 0x64, 0x57, 0x09, 0x48, 0x7f, 0xfb,
+	0xb0, 0x8f, 0x2f, 0xa7, 0xfe, 0xb2, 0xf1, 0x07, 0x98, 0xab, 0x9c, 0xe9, 0xb0, 0x63, 0x1f, 0xe9,
+	0xc9, 0xbf, 0x00, 0x00, 0x00, 0xff, 0xff, 0x8c, 0x6b, 0xcc, 0x76, 0x26, 0x03, 0x00, 0x00,
 }
 
 func (this *Milestone) Equal(that interface{}) bool {
@@ -350,6 +397,30 @@ func (this *MilestoneProposition) Equal(that interface{}) bool {
 		}
 	}
 	if this.StartBlockNumber != that1.StartBlockNumber {
+		return false
+	}
+	return true
+}
+func (this *Params) Equal(that interface{}) bool {
+	if that == nil {
+		return this == nil
+	}
+
+	that1, ok := that.(*Params)
+	if !ok {
+		that2, ok := that.(Params)
+		if ok {
+			that1 = &that2
+		} else {
+			return false
+		}
+	}
+	if that1 == nil {
+		return this == nil
+	} else if this == nil {
+		return false
+	}
+	if this.MaxMilestonePropositionLength != that1.MaxMilestonePropositionLength {
 		return false
 	}
 	return true
@@ -485,6 +556,34 @@ func (m *MilestoneProposition) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	return len(dAtA) - i, nil
 }
 
+func (m *Params) Marshal() (dAtA []byte, err error) {
+	size := m.Size()
+	dAtA = make([]byte, size)
+	n, err := m.MarshalToSizedBuffer(dAtA[:size])
+	if err != nil {
+		return nil, err
+	}
+	return dAtA[:n], nil
+}
+
+func (m *Params) MarshalTo(dAtA []byte) (int, error) {
+	size := m.Size()
+	return m.MarshalToSizedBuffer(dAtA[:size])
+}
+
+func (m *Params) MarshalToSizedBuffer(dAtA []byte) (int, error) {
+	i := len(dAtA)
+	_ = i
+	var l int
+	_ = l
+	if m.MaxMilestonePropositionLength != 0 {
+		i = encodeVarintMilestone(dAtA, i, uint64(m.MaxMilestonePropositionLength))
+		i--
+		dAtA[i] = 0x8
+	}
+	return len(dAtA) - i, nil
+}
+
 func encodeVarintMilestone(dAtA []byte, offset int, v uint64) int {
 	offset -= sovMilestone(v)
 	base := offset
@@ -556,6 +655,18 @@ func (m *MilestoneProposition) Size() (n int) {
 	}
 	if m.StartBlockNumber != 0 {
 		n += 1 + sovMilestone(uint64(m.StartBlockNumber))
+	}
+	return n
+}
+
+func (m *Params) Size() (n int) {
+	if m == nil {
+		return 0
+	}
+	var l int
+	_ = l
+	if m.MaxMilestonePropositionLength != 0 {
+		n += 1 + sovMilestone(uint64(m.MaxMilestonePropositionLength))
 	}
 	return n
 }
@@ -948,6 +1059,75 @@ func (m *MilestoneProposition) Unmarshal(dAtA []byte) error {
 				b := dAtA[iNdEx]
 				iNdEx++
 				m.StartBlockNumber |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		default:
+			iNdEx = preIndex
+			skippy, err := skipMilestone(dAtA[iNdEx:])
+			if err != nil {
+				return err
+			}
+			if (skippy < 0) || (iNdEx+skippy) < 0 {
+				return ErrInvalidLengthMilestone
+			}
+			if (iNdEx + skippy) > l {
+				return io.ErrUnexpectedEOF
+			}
+			iNdEx += skippy
+		}
+	}
+
+	if iNdEx > l {
+		return io.ErrUnexpectedEOF
+	}
+	return nil
+}
+func (m *Params) Unmarshal(dAtA []byte) error {
+	l := len(dAtA)
+	iNdEx := 0
+	for iNdEx < l {
+		preIndex := iNdEx
+		var wire uint64
+		for shift := uint(0); ; shift += 7 {
+			if shift >= 64 {
+				return ErrIntOverflowMilestone
+			}
+			if iNdEx >= l {
+				return io.ErrUnexpectedEOF
+			}
+			b := dAtA[iNdEx]
+			iNdEx++
+			wire |= uint64(b&0x7F) << shift
+			if b < 0x80 {
+				break
+			}
+		}
+		fieldNum := int32(wire >> 3)
+		wireType := int(wire & 0x7)
+		if wireType == 4 {
+			return fmt.Errorf("proto: Params: wiretype end group for non-group")
+		}
+		if fieldNum <= 0 {
+			return fmt.Errorf("proto: Params: illegal tag %d (wire type %d)", fieldNum, wire)
+		}
+		switch fieldNum {
+		case 1:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field MaxMilestonePropositionLength", wireType)
+			}
+			m.MaxMilestonePropositionLength = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowMilestone
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.MaxMilestonePropositionLength |= uint64(b&0x7F) << shift
 				if b < 0x80 {
 					break
 				}
